<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LPK01</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_lpk_notification_title_template">New lpk: %1$s</string>
    <string name="new_lpk_notification_placeholder_text_template">You said %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="green_string">Green</string>
    <string name="pink_string">Pink</string>
    <string name="yellow_string">Yellow</string>
    <string name="orange_string">Default</string>
    <string name="about_string">About</string>
    <string name="settings_string">Settings</string>
    <string name="center_string">This is centered</string>
    <string name="main_button1_string">Start notification</string>
    <string name="main_button2_string">Stop notification</string>
    <string name="settings_btn_1">Default</string>
    <string name="settings_btn_2">Yellow</string>
    <string name="settings_btn_3">Green</string>
    <string name="settings_btn_4">Pink</string>
    <string name="settings_h1_string">App background colour</string>
    <string name="inline_preferences">inline_preferences</string>
    <string name="title_checkbox_preference">title_checkbox_preference</string>
    <string name="summary_checkbox_preference">summary_checkbox_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="title_list_preference">Background</string>
    <string name="summary_list_preference">Change App Background Colour</string>
    <string name="dialog_title_list_preference">Choose a colour</string>
    <string name="launch_preferences">launch_preferences</string>
    <string name="title_screen_preference">title_screen_preference</string>
    <string name="summary_screen_preference">summary_screen_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_child_preference">title_child_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="title_fragment_preference">title_fragment_preference</string>
    <string name="summary_fragment_preference">summary_fragment_preference</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_welcome">Welcome to the App!</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="about_Title">About:</string>
    <string name="about_picture_text">Here\'s a picture!</string>
    <string name="about_more_info">More info: hahahaha</string>
    <string name="about_author">Written by: Luke Kroeker</string>

</resources>
