<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_settings"
        app:showAsAction="never"
        android:title="@string/settings_string"
        android:orderInCategory="5"

        />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_pink"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/pink_string" />
        <item
            android:id="@+id/menu_green"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/green_string" />
        <item
            android:id="@+id/menu_yellow"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/yellow_string" />
        <item
            android:id="@+id/menu_orange"
            android:orderInCategory="4"
            app:showAsAction="never"
            android:title="@string/orange_string" />

    </group>

    <item android:id="@+id/menu_about"
        app:showAsAction="never"
        android:title="@string/about_string"
        android:orderInCategory="6"
        />
</menu>
