<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity"
    android:background="#F2712B"
    android:id="@+id/settings_view">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_h1_string"
        android:id="@+id/textView"
        android:layout_above="@+id/radioButton"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_1"
        android:id="@+id/radioButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_2"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_3"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_4"
        android:id="@+id/radioButton4"
        android:layout_below="@+id/radioButton3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
